# CodingBotBaseRepo

./: cookiecutter.json
{{ cookiecutter.project_name }}/: .gitignore  README.md  env_setup.sh  pyproject.toml  repo_info.yaml
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/configs/: logging.yaml
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/src/: logger.py
