[tool.poetry]
name = "{{ cookiecutter.project_name | slugify }}"
version = "0.1.0"
description = "{{ cookiecutter.repo_description }}"
authors = ["{{ cookiecutter.author }}"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.0"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
# Add development dependencies here if needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"